[package]
name = "yahoo2redists"
version = "0.1.0"
edition = "2021"
authors = ["Raffaele Abate <raf@kairosdojo.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
redis = { version = "0.21.5", features = ["tokio-comp"] }
redis_ts = "0.4.1"
yahoo_finance_api = "1.3.0"
tokio-test = "0.4.2"